[canary] Fix sources collapse/expand

--- a/less/_canary.less
+++ b/less/_canary.less
@@ -207,6 +207,12 @@ body .inspector-view-toolbar.toolbar::shadow .toolbar-button-theme {
 	color: @global-text !important;
 }
 
+// show/hide button (shadow-split-view in stable)
+
+::shadow .shadow-split-widget button.sidebar-show-hide-button {
+	background-color: @glyph-inactive !important;
+}
+
 /* ==========================================================================
    Console
    ========================================================================== */
@@ -223,3 +229,4 @@ body .inspector-view-toolbar.toolbar::shadow .toolbar-button-theme {
 #geolocation-override-section td {
 	color: @global-label !important;
 }
+
