--- a/less/_clean-this-up.less
+++ b/less/_clean-this-up.less
@@ -771,27 +771,6 @@ html /deep/ .component-root {
 	}
 }
 
-
-// glyphs
-::shadow {
-
-	.status-bar-item > .glyph,
-	.shadow-split-view button.sidebar-show-hide-button {
-		background-color: @glyph-inactive !important;
-	}
-
-	.status-bar-item[disabled] {
-		opacity: 0.5 !important;
-	}
-
-	button.status-bar-item.toggled-on .glyph,
-	.filter-status-bar-item.toggled-shown .glyph,
-	button.status-bar-item:not([disabled]):active .glyph {
-		background-color: @glyph-active !important;
-	}
-
-}
-
 // panel-sources
 
 // replaces Alternate Buttons
