--- a/less/_toolbars.less
+++ b/less/_toolbars.less
@@ -261,3 +261,24 @@ select.tabbed-pane-header-tabs-drop-down-select{
 		border-top: none !important;
 	}
 }
+
+
+// Glyphs
+::shadow {
+
+	.status-bar-item > .glyph,
+	.shadow-split-view button.sidebar-show-hide-button {
+		background-color: @glyph-inactive !important;
+	}
+
+	.status-bar-item[disabled] {
+		opacity: 0.5 !important;
+	}
+
+	button.status-bar-item.toggled-on .glyph,
+	.filter-status-bar-item.toggled-shown .glyph,
+	button.status-bar-item:not([disabled]):active .glyph {
+		background-color: @glyph-active !important;
+	}
+
+}
